TestSuite/PascalABCTests/errors/err0236.pas
type
  //обязательно предописание
  t1 = class;
  
  t1 = abstract class
  
  public 
    procedure p1; abstract;
    
    function f1: byte; abstract;
  
  end;

function t1.f1: byte := f1;

begin end.